--- a/index.html
+++ b/index.html
@@ -43,8 +43,22 @@
 <h2>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h2>
 
-<p>QuickFuzz can generate random code from various programming languages. Obviously, most of the time this code won't be syntactically or semantically valid. One of the things random code can't account for is variable coherence, i.e., using variables that are already defined.<br>
-My project was about partially solving this problem, and automating the solution.  </p>
+<p>QuickFuzz can generate random code from various programming languages. Obviously, most of the time this code won't be syntactically or semantically valid. One of the things random code can't account for is variable coherence, i.e., using variables that are already defined. We can see this with this Python example (generated with more probability on assignments for illustration):  </p>
+
+<pre><code>hiy = vu  
+jdu = ag  
+rpa = kk
+zcx = 2
+vp = f  
+np = 2.1850528035871353  
+b = 1 &gt;&gt; 0  
+zau = a  
+meg = -18.39505230244595 == p  
+ize = le  
+no = -2  
+</code></pre>
+
+<p>My project was about partially solving this problem, and automating the solution.  </p>
 
 <h2>
 <a id="main-work" class="anchor" href="#main-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main work</h2>
@@ -108,13 +122,52 @@ class Fixable a b where
 <h2>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h2>
 
-<p>We can test this with a Python example:  </p>
+<p>We can test this with our previous Python example. After applying the fix, we get the following:</p>
+
+<pre><code>hiy = 3  
+jdu = hiy  
+rpa = jdu  
+zcz = 2  
+vp = zcz  
+np = 2.1850528035871353   
+b = 1 &gt;&gt; 0  
+zau = jdu  
+meg = -18.39505230244595 == zcz  
+ize = f  
+no = -2  
+</code></pre>
+
+<p>We can see that now we reuse previously defined variables in new assignments.<br>
+We ran QuickFuzz over different implementations of Bash, Python, Lua and JavaScript. So far we have found:</p>
+
+<ul>
+<li>A bug in the current version of Lua (there's a patch available).<br>
+</li>
+<li>A case where Python compilation takes a very long time (sometimes forever).</li>
+<li>Aprox. 20 bugs in bash (waiting for feedback).</li>
+<li>Aprox. 10 bugs in Busybox's implementation of bash (ash) (waiting for feedback).</li>
+</ul>
 
 <h2>
-<a id="problems" class="anchor" href="#problems" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Problems</h2>
+<a id="limitations" class="anchor" href="#limitations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Limitations</h2>
+
+<ul>
+<li>As mentioned before, the user has to define some auxiliary functions to make the derivation work. These functions are pretty easy to understand so it's easy to do it, but it's somewhat annoying.<br>
+</li>
+<li>When we have assignments, there are two different situations to keep in mind: you can use the new variable in the "body" of the assignments (e.g. a for) or you can't (e.g. a normal assignment). Currently there is no way to distinguish these 2 cases, and every case is treated like it's of the second class. This could be easily fixed by separating assignments into two lists (or providing more information), but we decided to leave it as it ts for now.<br>
+</li>
+<li>It takes some (tedious) work to check and understand the target language's AST in order to identify correctly the information we need.<br>
+</li>
+</ul>
 
 <h2>
-<a id="conclusion" class="anchor" href="#conclusion" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conclusion</h2>
+<a id="future-work" class="anchor" href="#future-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Future work</h2>
+
+<ul>
+<li>As said in the previous section, it would be desirable to automatically get the necessary functions instead of asking for the user to provide them, at least if it's easy to produce them.<br>
+</li>
+<li>Providing more information can lead to better results. An example could be adding function parameters to our state.</li>
+</ul>
       </section>
 
     </div>
