--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@ We ran QuickFuzz over different implementations of Bash, Python, Lua and JavaScr
 <a id="limitations" class="anchor" href="#limitations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Limitations</h2>
 
 <ul>
-<li>As mentioned before, the user has to define some auxiliary functions to make the derivation work. These functions are pretty easy to understand so it's easy to do it, but it's somewhat annoying.<br>
+<li>We previously mentioned that the user has to define some auxiliary functions to make the derivation work. These functions are pretty easy to understand so it's (or should be) easy to do it, but it's somewhat annoying.<br>
 </li>
 <li>When we have assignments, there are two different situations to keep in mind: you can use the new variable in the "body" of the assignments (e.g. a for) or you can't (e.g. a normal assignment). Currently there is no way to distinguish these 2 cases, and every case is treated like it's of the second class. This could be easily fixed by separating assignments into two lists (or providing more information), but we decided to leave it as it ts for now.<br>
 </li>
-<li>It takes some (tedious) work to check and understand the target language's AST in order to identify correctly the information we need.<br>
+<li>It takes some work to check and understand the target language's AST in order to identify correctly the information we need.<br>
 </li>
 </ul>
 
