Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@ meg <span class="pl-k">=</span> <span class="pl-k">-</span><span class="pl-c1">1
 ize <span class="pl-k">=</span> vp  
 no <span class="pl-k">=</span> <span class="pl-k">-</span><span class="pl-c1">2</span>  </pre></div>
 
-<p>We can see that now we reuse previously defined variables in new assignments.<br>
-We ran QuickFuzz over different implementations of Bash, Python, Lua and JavaScript. So far we have found:</p>
+<p>We can see that now we reuse previously defined variables in new assignments.  </p>
+
+<p>We ran QuickFuzz over different implementations of Bash, Python, Lua and JavaScript. So far we have found:</p>
 
 <ul>
 <li>A bug in the current version of Lua (there's a patch available).<br>
