--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@ no <span class="pl-k">=</span> <span class="pl-k">-</span><span class="pl-c1">2<
 <p>We ran QuickFuzz over different implementations of Bash, Python, Lua and JavaScript. So far we have found (after deduplicating the bugs using backtrace):</p>
 
 <ul>
-<li>A bug in the current version of Lua (there's a patch available).<br>
+<li>
+<a href="https://www.lua.org/bugs.html#5.3.3-1">A rediscovered bug in the current version of Lua</a> (there's a patch available).<br>
 </li>
-<li>A case where Python compilation takes a very long time (sometimes forever) <a href="http://bugs.python.org/issue27695">1</a>.</li>
+<li>
+<a href="http://bugs.python.org/issue27695">A case where Python compilation takes a very long time (sometimes forever)</a>.</li>
 <li>Aprox. 20 bugs in bash (waiting for feedback).</li>
 <li>Aprox. 10 bugs in Busybox's implementation of bash (ash) (waiting for feedback).</li>
 </ul>
@@ -171,8 +173,6 @@ no <span class="pl-k">=</span> <span class="pl-k">-</span><span class="pl-c1">2<
 <li>We mentioned that the user has to define some auxiliary functions to make the derivation work. These functions are pretty easy to understand so it's (or should be) easy to do it, but it's somewhat annoying.<br>
 </li>
 <li>When we have assignments, there are two different situations to keep in mind: you can use the new variable in the "body" of the assignments (e.g. a for) or you can't (e.g. a normal assignment). Currently there is no way to distinguish these 2 cases, and every case is treated like it's of the second class. This could be easily fixed by separating assignments into two lists (or providing more information), but we decided to leave it as it is for now.<br>
-</li>
-<li>It takes some work to check and understand the target language's AST in order to correctly identify the information we need.<br>
 </li>
 </ul>
 
