--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ no <span class="pl-k">=</span> <span class="pl-k">-</span><span class="pl-c1">2<
                    evalStateT (fix a) (initV <span class="pl-k">::</span> <span class="pl-en">StV</span> <span class="pl-en">Id</span>)  
                 <span class="pl-k">where</span> go n = ...  </pre></div>
 
-<p>As an example, the Python module with variable coherence can be found <a href="https://github.com/CIFASIS/QuickFuzz/blob/master/src/Python.hs">here</a>.  </p>
+<p>As an example, the Lua module with variable coherence can be found <a href="https://github.com/CIFASIS/QuickFuzz/blob/master/src/Lua.hs">here</a>.  </p>
 
 <h2>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h2>
@@ -172,9 +172,19 @@ no <span class="pl-k">=</span> <span class="pl-k">-</span><span class="pl-c1">2<
 <ul>
 <li>We mentioned that the user has to define some auxiliary functions to make the derivation work. These functions are pretty easy to understand so it's (or should be) easy to do it, but it's somewhat annoying.<br>
 </li>
-<li>When we have assignments, there are two different situations to keep in mind: you can use the new variable in the "body" of the assignments (e.g. a for) or you can't (e.g. a normal assignment). Currently there is no way to distinguish these 2 cases, and every case is treated like it's of the second class. This could be easily fixed by separating assignments into two lists (or providing more information), but we decided to leave it as it is for now.<br>
+<li>When we have assignments, there are two different situations to keep in mind: you can use the new variable in the "body" of the assignments (e.g. a for) or you can't (e.g. a normal assignment). Currently there is no way to distinguish these 2 cases, and every case is treated like it's of the second class. For example:<br>
 </li>
 </ul>
+
+<div class="highlight highlight-source-python"><pre><span class="pl-k">for</span> i <span class="pl-k">in</span> <span class="pl-c1">1</span>:
+    j <span class="pl-k">=</span> i</pre></div>
+
+<p>And if we "fix" it:  </p>
+
+<div class="highlight highlight-source-python"><pre><span class="pl-k">for</span> i <span class="pl-k">in</span> <span class="pl-c1">1</span>:
+    j <span class="pl-k">=</span> <span class="pl-c1">4</span></pre></div>
+
+<p>This could be easily fixed by separating assignments into two lists (or providing more information), but we decided to leave it as it is for now.  </p>
 
 <h2>
 <a id="future-work" class="anchor" href="#future-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Future work</h2>
